--- a/sass/style.sass
+++ b/sass/style.sass
@@ -651,13 +651,21 @@ body
   font-size: 0
   width: 10px
   height: 10px
+  fill: #cacaca
+
+  &:hover
+    fill: #000000
+
+  &:active
+    fill: #81b3d2
+
+  &--active
+    fill: #81b3d2
 
   &--up
-    background-image: url("../img/svg/icon-up-dir.svg")
 
   &--down
     margin-left: 12px
-    background-image: url("../img/svg/icon-down-dir.svg")
 
 .sorted-hotel__article
   border-bottom: 1px solid #e6e6e6
