--- a/sass/style.sass
+++ b/sass/style.sass
@@ -156,18 +156,16 @@ body
 
 
 .page-footer__copyright
-  font-size: 14px
-  line-height: 26px
-  margin: 0
-  text-align: center
+  display: flex
   width: 400px
+  margin: 0
+  justify-content: center
+  align-items: center
 
 .page-footer__copylink
-  vertical-align: middle
+  margin-left: 10px
 
 .page-footer__copylogo
-  vertical-align: middle
-  margin-left: 5px
   fill: #231f20
 
   &:hover
@@ -450,7 +448,7 @@ body
     content: ""
     top: 18px
     left: 13px
-    width: 12px
+    width: 11px
     height: 3px
     background-color: #aaabaa
 
@@ -465,10 +463,10 @@ body
   &::after
     position: absolute
     content: ""
-    top: 13px
-    left: 18px
+    top: 14px
+    left: 17px
     width: 3px
-    height: 12px
+    height: 11px
     background-color: #aaabaa
 
   &:hover::after
@@ -527,8 +525,9 @@ body
   margin: 0
   padding: 0
 
-  &--renge
-    width: 315px
+  &--range
+    width: 330px
+    padding-left: 12px
 
   &:nth-child(2)
     margin-left: 55px
@@ -537,6 +536,10 @@ body
 .form-filter__legend
   font-weight: bold
   font-size: 16px
+
+  &--range
+    margin-bottom: 9px
+    line-height: 21px
 
 .form-filter__list
   display: flex
@@ -576,54 +579,58 @@ body
   width: 27px
   background-image: url(../img/svg/checkbox-on.svg)
 
+/* кастомный ползунок с цифрами */
+@import "filter-range"
+
 .form-filter__submit
-  text-transform: uppercase
   display: block
+  width: 138px
   margin: 0 auto
-  padding: 6px 35px
+  padding: 6px 32px
   font-size: 14px
-  line-height: 21px
+  line-height: 20px
   color: #ffffff
   text-transform: uppercase
   background: transparent
   border: 2px solid #ffffff
   border-radius: 2px
+  cursor: pointer
 
-/* кастомный ползунок с цифрами */
-@import "filter-range"
+  &:hover
+    color: #000000
+    background-color: #ffffff
 
 .sorted-hotel
   color: #000000
-  display: flex
-  flex-direction: column
 
 .sorted-hotel__found
   display: flex
   align-items: center
-  margin: 0
-  padding: 16px 72px 20px
+  padding: 24px 72px
   border-bottom: 1px solid #e6e6e6
 
 .sorted-hotel__quantity
   font-weight: bold
   font-size: 21px
   line-height: 26px
-  height: 22px
   margin: 0
-  margin-right: 46px
+  margin-right: 48px
 
 .sorted-hotel__sorting
   font-size: 12px
-  line-height: 18px
+  line-height: 16px
+  margin-right: 40px
 
 .sorted-hotel__list
   display: flex
   list-style: none
+  margin-bottom: 5px
+  padding: 0
 
 .sorted-hotel__item
-
-  &:nth-child(2)
-    margin: 0 33px
+  font-size: 12px
+  line-height: 16px
+  margin-right: 33px
 
 .sorted-hotel__type-sort
   font-size: 12px
@@ -665,11 +672,11 @@ body
   &--up
 
   &--down
-    margin-left: 12px
+    margin-left: 10px
 
 .sorted-hotel__article
   border-bottom: 1px solid #e6e6e6
-  padding: 28px 72px 35px
+  padding: 30px 72px
   display: flex
 
 .sorted-hotel__content
