добавил иконки календарика, и его отображение

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -384,7 +384,7 @@ body
 
 .form-search__text
   background-color: #f2f2f2
-  border: none
+  border: solid 2px #f2f2f2
   width: 346px
   height: 38px
   font-size: 14px
@@ -410,16 +410,14 @@ body
   transform: translateY(-50%)
   cursor: pointer
   background-color: transparent
+  background-image: url("../img/svg/calendar.svg")
   border: none
 
-.calendar
-  fill: #a9a9a9
+  &:hover
+    background-image: url("../img/svg/calendar-hover.svg")
 
-.calendar:hover
-  fill: #000000
-
-.calendar:active
-  fill: #81b3d2
+  &:active
+    background-image: url("../img/svg/calendar-active.svg")
 
 .form-search__number
   font-size: 14px
@@ -705,6 +703,12 @@ body
 .sorted-hotel__link
   color: #000000
   text-decoration: none
+
+  &:hover
+    color: #81b3d2
+
+  &:active
+    color: rgba(0, 0, 0, 0.3)
 
 .sorted-hotel__description
   margin: 0
