--- a/css/style.css
+++ b/css/style.css
@@ -66,20 +66,33 @@ body {
 .page-header__menu-list {
   display: flex;
   flex-wrap: wrap;
+  vertical-align: middle;
   margin: 0;
-  padding: 0;
+  padding: 0 73px;
 }
 
 .page-header__menu-item {
-  display: flex;
-  width: 239px;
+  width: 240px;
   min-height: 56px;
-  align-items: center;
-  justify-content: center;
+  list-style: none;
+  padding: 14px 0;
+}
+
+.page-header__menu-item:nth-child(4n+1) {
+  text-align: left;
 }
 
 .page-header__menu-item:nth-child(4n+2) {
-  margin-right: 244px;
+  text-align: left;
+  margin-right: auto;
+}
+
+.page-header__menu-item:nth-child(4n+3) {
+  text-align: right;
+}
+
+.page-header__menu-item:nth-child(4n+4) {
+  text-align: right;
 }
 
 .page-header__menu-link {
@@ -435,6 +448,7 @@ body {
 
 .form-search__label {
   display: inline-block;
+  vertical-align: middle;
   margin-right: auto;
 }
 
@@ -649,6 +663,7 @@ body {
 
 .form-filter__label {
   position: relative;
+  cursor: pointer;
   font-size: 14px;
   line-height: 21px;
 }
@@ -660,6 +675,7 @@ body {
   display: block;
   width: 23px;
   height: 23px;
+  background-color: transparent;
   background-image: url("../img/svg/checkbox-off.svg");
   background-repeat: no-repeat;
 }
@@ -850,26 +866,38 @@ body {
 
 .sorted-hotel__arrow {
   display: inline-block;
+  vertical-align: middle;
   font-size: 0;
-  width: 10px;
-  height: 10px;
-  fill: #cacaca;
+  width: 0;
+  height: 0;
 }
 
-.sorted-hotel__arrow:hover {
-  fill: #000000;
-}
-
-.sorted-hotel__arrow:active {
-  fill: #81b3d2;
-}
-
-.sorted-hotel__arrow--active {
-  fill: #81b3d2;
+.sorted-hotel__arrow--up {
+  border-bottom: 10px solid #cacaca;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
 }
 
 .sorted-hotel__arrow--down {
+  border-top: 10px solid #cacaca;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
   margin-left: 10px;
+}
+
+.sorted-hotel__arrow--active {
+  border-top-color: #81b3d2;
+  border-bottom-color: #81b3d2;
+}
+
+.sorted-hotel__arrow:hover {
+  border-top-color: #000000;
+  border-bottom-color: #000000;
+}
+
+.sorted-hotel__arrow:active {
+  border-top-color: #81b3d2;
+  border-bottom-color: #81b3d2;
 }
 
 .sorted-hotel__article {
@@ -967,8 +995,10 @@ body {
   display: block;
   font-size: 0;
   display: inline-block;
+  vertical-align: middle;
   height: 20px;
   width: 20px;
+  background-color: transparent;
   background-image: url("../img/svg/star.svg");
   background-repeat: space no-repeat;
   margin: 0;
@@ -988,7 +1018,6 @@ body {
 }
 
 .sorted-hotel__text {
-  display: inline-block;
   color: #666666;
   background-color: #f2f2f2;
   padding: 5px 15px;
