--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ body {
 .page-footer__copylink {
   font-size: 0;
   margin-left: 10px;
+  height: 41px;
 }
 
 .page-footer__copylink:focus {
@@ -401,7 +402,7 @@ body {
   padding-top: 57px;
   background-color: #ffffff;
   text-align: center;
-  margin-bottom: -125px;
+  margin-bottom: -120px;
 }
 
 .search-hotel__header {
@@ -415,6 +416,11 @@ body {
   width: 450px;
   margin: 0 auto;
   margin-bottom: 48px;
+}
+
+.search-hotel__map {
+  height: 593px;
+  background-image: url("../img/map.png");
 }
 
 .form-search-show {
@@ -450,6 +456,37 @@ body {
   padding: 55px;
   background-color: #ffffff;
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+  z-index: 1;
+}
+
+.form-search--hide {
+  animation: form-hide 1s forwards;
+  display: none;
+}
+
+.form-search--show {
+  animation: form-show 1s forwards;
+}
+
+@keyframes form-show {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes form-hide {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+    box-shadow: none;
+  }
 }
 
 .form-search__row {
