--- a/sass/style.sass
+++ b/sass/style.sass
@@ -203,6 +203,7 @@ body
 .page-footer__copylink
   font-size: 0
   margin-left: 10px
+  height: 41px
 
   &:focus
     outline: 3px solid orange
@@ -357,7 +358,7 @@ body
   padding-top: 57px
   background-color: #ffffff
   text-align: center
-  margin-bottom: -125px
+  margin-bottom: -120px
 
 .search-hotel__header
   margin: 0 auto
@@ -371,6 +372,8 @@ body
   margin-bottom: 48px
 
 .search-hotel__map
+  height: 593px
+  background-image: url("../img/map.png")
 
 .form-search-show
   padding: 30px
@@ -402,6 +405,29 @@ body
   padding: 55px
   background-color: #ffffff
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15)
+  z-index: 1
+
+  &--hide
+    animation: form-hide 1s forwards
+    display: none
+
+  &--show
+    animation: form-show 1s forwards
+
+@keyframes form-show
+  0%
+    transform: translateY(-100%)
+    opacity: 0
+  100%
+    transform: translateY(0)
+    opacity: 1
+
+@keyframes form-hide
+  0%
+    transform: translateY(0)
+  100%
+    transform: translateY(-100%)
+    box-shadow: none
 
 .form-search__row
   position: relative
