--- a/sass/style.sass
+++ b/sass/style.sass
@@ -150,7 +150,6 @@ body
 .page-footer__social-link
   position: relative
   display: block
-  font-size: 0
   color: #ffffff
   width: 46px
   height: 48px
@@ -299,7 +298,7 @@ body
 .features__subheader
   font-weight: bold
   font-size: 21px
-  width: 150px
+  width: 160px
   margin: 0 auto
 
 .features__number
@@ -373,6 +372,7 @@ body
 
 .search-hotel__map
   height: 593px
+  background-color: #81b3d2
   background-image: url("../img/map.png")
 
 .form-search-show
@@ -467,6 +467,7 @@ body
   &:focus
     background-color: #ffffff
     border: solid 2px #e5e5e5
+    outline: none
 
 .form-search__calendar
   position: absolute
@@ -564,13 +565,6 @@ body
 
 
 /* catalog.html style*/
-.page-header--index
-  background-image: url("../img/svg/intro-mask.svg"), url("../img/svg/intro-welcome.svg"), url("../img/index-bg.jpg")
-  background-repeat: no-repeat
-  background-size: 1200px 59px, 459px 353px, 1200px 800px
-  background-position: center 506px, center 132px, center -28px
-  height: 563px
-
 .filter-hotel
   min-height: 217px
   color: #ffffff
@@ -628,7 +622,7 @@ body
   font-size: 14px
   line-height: 21px
 
-  &:focus + .form-filter__label
+  &:focus + .form-filter__label::before
     outline: 3px solid orange
 
 .form-filter__label
@@ -658,6 +652,8 @@ body
 
 .form-filter__check:checked:disabled + .form-filter__label::before
   background-image: url("../img/svg/checkbox-on-dis.svg")
+
+
 
 /* кастомный ползунок с цифрами */
 @import "filter-range"
@@ -738,7 +734,6 @@ body
 .sorted-hotel__arrow
   display: inline-block
   vertical-align: middle
-  font-size: 0
   width: 0
   height: 0
 
@@ -781,6 +776,7 @@ body
 .sorted-hotel__foto
   order: -1
   margin-right: 30px
+  background-color: #81b3d2
 
 .sorted-hotel__header
   font-weight: bold
