--- a/sass/style.sass
+++ b/sass/style.sass
@@ -861,7 +861,7 @@ body
     width: 89px
 
 .sorted-hotel__text
-  displey: block
+  display: block
   color: #666666
   background-color: #f2f2f2
   padding: 3px 13px
